# tasker

./: .gitignore  Cargo.toml  LICENSE  README.md  Taskfile
.github/workflows/: build.yaml  create_release.yaml  pull_request.yaml
src/: cliargs.rs  config.rs  entrypoint.rs  main.rs
src/config/: cmd.rs  mod.rs  taskcontext.rs  taskfile.rs  tasks.rs  taskstanza.rs
src/file_parsing/: builder.rs  cmd.rs  runner.rs  taskfile.rs  taskstanza.rs
src/run/: errors.rs  mod.rs
src/runners/: builder.rs  mod.rs  runner.rs
src/taskfile/: cmd.rs  errors.rs  mod.rs  taskfile.rs  taskstanza.rs
src/tests/: Taskfile  mod.rs  test_integration.rs
src/utils/: errors.rs  iters.rs  mod.rs  strings.rs  test_helpers.rs
