[package]
name = "tasker"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive", "string", "color", "env"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = "0.9.17"
